[tool.poetry]
name = "qdrant-txtai"
version = "0.10.2"
description = "An integration of Qdrant ANN vector database backend with txtai"
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com>"]
packages = [
    {include = "qdrant_txtai"}
]
readme = "README.md"
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7"
txtai = "^5.0.0"
qdrant_client = "0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.1"
pythonpath = [
    "src/"
]
testpaths = [
    "tests/"
]
