[tool.poetry]
name = "qdrant-txtai"
version = "2.0.0"
description = "An integration of Qdrant ANN vector database backend with txtai"
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com>"]
packages = [
    {include = "qdrant_txtai", from = "src"}
]
readme = "README.md"
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<=3.13"
txtai = ">=5.0.0"
qdrant-client = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pre-commit = "^2.20.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.1"
pythonpath = [
    "src/"
]
testpaths = [
    "tests/"
]
